...
            <ButtonText>Cancel</ButtonText>
          </Button>
          <Button
            onPress={onConfirm} 
            size="sm" 
            className="flex-grow"
            testID="delete-modal-confirm"
          >
            <ButtonText>Delete</ButtonText>
          </Button>
        </ModalFooter>
      </ModalContent>
    </Modal>
...
