...
    [location],
  );

  return (
    <View
      className="flex-1 bg-background-0 rounded-xl shadow-hard-3 p-3 gap-4"
      testID="memento-card"
    >
      <View className="aspect-square">
        <Image
          source={{ uri: thumbnail }}
          className="w-full h-full"
          alt=""
...
