...
          onPress={handleEditMemento}
          testID="view-memento-edit-button"
        >
          <ButtonIcon as={EditIcon} className={iconClasses} />
        </Button>
        <Button
          testID="view-memento-delete-button"
          size="xl"
          className={buttonClasses}
          onPress={handleDeletePress}
        >
          <ButtonIcon as={TrashIcon} className={iconClasses} />
        </Button>
...
